jsdialog: fix menubutton alignment with other controls in grids
The broad button selector in btns.css matched jsdialog menubuttons,
overriding their margin and width. This caused menubuttons to be offset
by 5px from comboboxes and listboxes in the same grid column, since
those are div elements that do not match the btns.css selector.

Exclude .menubutton from the btns.css catch-all so menubuttons only
get their jsdialogs.css styling. Also fix the menubutton rule to use
the standard control height (32px), font size, and padding to match
other controls, start-align the content, and push the dropdown arrow
to the end of the button.

Add a regression test that asserts the menubutton and listbox-container
share the same left edge in the Border tab of the Character dialog.

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -1969,17 +1969,18 @@ img.context-menu-icon {
 /* menu button */
 .jsdialog.menubutton {
 	box-sizing: border-box;
+	height: 32px;
 	line-height: normal;
-	font-size: calc(var(--default-font-size)*1.2);
+	font-size: var(--default-font-size);
 	font-family: var(--cool-font);
 	border: 1px solid var(--color-border-dark);
 	border-radius: var(--border-radius);
-	padding: 8px 10px;
+	padding: 0 10px;
 	margin: 2px 0px;
 	background-color: var(--color-background-dark);
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-start;
 }
 
 .jsdialog.menubutton img {
@@ -2009,6 +2010,10 @@ button.has-img img {
 	display: table-cell !important;
 	float: right;
 	margin: 5px 0 0 5px;
+}
+
+.jsdialog.menubutton .arrow {
+	margin-inline-start: auto;
 }
 
 .jsdialog.menubutton[disabled] {
